ChangeLog
=========

recent
-----
- installer-gui: - package selecting refactored 

0.8.2
------
- installer-gui: - downloader is able to follow redirected urls using the 302 http response code
                 - create package database entry for exe/msi installer to avoid multiple time installation 
                 - initial support for proxy username and password, it is required to set it in the installer.ini using entries proxyUser= and proxyPassword=
                 - print message box in case downloading fails -> user can choose between cancel ignore and retry
                                  
0.8.1
-------
- all:           - added .tar.bz2 support
                 - some internal changes to allow 'file://' in config-local.txt
- installer-gui: - removed downloaded files when download is broken 


0.8.0
-------
- installer-gui: - added category and package info display
                 - added package related detailed notes 
                 - added hint files containing package description, categories and dependencies
                 - added hint file parsing for modindex site parser to get full package information 
                 - dropped support for *.notes files, they are replaced by the *.hint files
- configer:      - new tool added for config file creating based on 'hint'-files

0.7.6-1
-------
- installer-gui: - relinked without msvcrt80.dll reference to avoid dependency to vc++_redist package

0.7.6
------
- installer-gui: - added simple versioned dependency support
                 - added more debug output in GlobalConfig 
                 - download to and read config files from the package download directory 
                 - only support zip archive format for apachemodindex web site scanner
                 - manual mirror adding support
                 - bug fix related to package list parsing (some sites uses uppercase html tags) 
- packager:      - new debuglibs option added, which adds debug libraries to lib binary package 