@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>559</width>
-    <height>475</height>
+    <height>498</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -40,7 +40,7 @@ p, li { white-space: pre-wrap; }
      <x>350</x>
      <y>294</y>
      <width>201</width>
-     <height>130</height>
+     <height>151</height>
     </rect>
    </property>
    <property name="title" >
@@ -70,27 +70,21 @@ p, li { white-space: pre-wrap; }
      </widget>
     </item>
     <item>
-     <widget class="QCheckBox" name="checkBox" >
+     <widget class="QCheckBox" name="developerMode" >
       <property name="enabled" >
-       <bool>false</bool>
+       <bool>true</bool>
       </property>
-      <property name="toolTip" >
-       <string comment="Uncheck to disable developer related package display" >&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal; text-decoration:none;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:8pt;">The installer could be used in an &lt;span style=" font-weight:600;">End User mode&lt;/span> and a &lt;span style=" font-weight:600;">developer mode&lt;/span>. &lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:8pt;">- In End User mode only binary packages are visible and installable. &lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:8pt;">- In Developer mode additional library and doc packages are visible and installable &lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:8pt;">and are selected by the installer too if the related binary package was selected as dependency. &lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:8pt;">Library package contains development libraries and header. &lt;/p>
-&lt;p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:8pt;">&lt;/p>
-&lt;p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:8pt;">&lt;/p>&lt;/body>&lt;/html></string>
+      <property name="focusPolicy" >
+       <enum>Qt::ClickFocus</enum>
       </property>
       <property name="text" >
        <string>Developer Mode</string>
       </property>
+      <property name="checkable" >
+       <bool>false</bool>
+      </property>
       <property name="checked" >
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
      </widget>
     </item>
@@ -128,7 +122,7 @@ p, li { white-space: pre-wrap; }
      <x>10</x>
      <y>294</y>
      <width>331</width>
-     <height>130</height>
+     <height>151</height>
     </rect>
    </property>
    <property name="title" >
@@ -199,7 +193,7 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_4" >
     <property name="geometry" >
      <rect>
-      <x>180</x>
+      <x>170</x>
       <y>60</y>
       <width>22</width>
       <height>16</height>
@@ -235,12 +229,58 @@ p, li { white-space: pre-wrap; }
      <string>Firefox settings</string>
     </property>
    </widget>
+   <widget class="QLineEdit" name="proxyUserName" >
+    <property name="geometry" >
+     <rect>
+      <x>110</x>
+      <y>120</y>
+      <width>101</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9" >
+    <property name="geometry" >
+     <rect>
+      <x>140</x>
+      <y>100</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text" >
+     <string>Username</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_10" >
+    <property name="geometry" >
+     <rect>
+      <x>240</x>
+      <y>100</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text" >
+     <string>Passsword</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="proxyPassword" >
+    <property name="geometry" >
+     <rect>
+      <x>220</x>
+      <y>120</y>
+      <width>101</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QDialogButtonBox" name="buttonBox" >
    <property name="geometry" >
     <rect>
      <x>360</x>
-     <y>440</y>
+     <y>460</y>
      <width>191</width>
      <height>25</height>
     </rect>
